--- a/package.json
+++ b/package.json
@@ -11,19 +11,30 @@
     "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.0",
+    "@expo/metro-config": "^0.4.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "dotenv": "^16.0.3",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "formik": "^2.2.9",
+    "graphql": "^16.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-router-native": "^6.4.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/eslint-parser": "^7.18.2",
     "eslint": "^8.19.0",
+    "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-native": "^4.0.0"
+    "eslint-plugin-react-native": "^4.0.0",
+    "jest": "^27.5.1",
+    "jest-expo": "^46.0.1"
   },
   "private": true
 }
