--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@apollo/client": "^3.7.0",
     "@expo/metro-config": "^0.4.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-picker/picker": "^2.2.1",
     "dotenv": "^16.0.3",
     "expo": "~44.0.0",
     "expo-linking": "~3.0.0",
@@ -38,6 +39,7 @@
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
     "react-router-native": "^6.4.2",
+    "use-debounce": "^8.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
