--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
     "react-router-native": "^6.4.2",
+    "twrnc": "^3.4.1",
     "use-debounce": "^8.0.4",
     "yup": "^0.32.11"
   },
