--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.0",
     "@expo/metro-config": "^0.4.0",
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
@@ -44,6 +44,7 @@
     "react-native-paper": "^5.0.0-rc.10",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.1",
     "twrnc": "^3.4.1",
     "use-debounce": "^8.0.4",
